--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -108,81 +108,83 @@ canvas {
 }
 
 body {
-  svg {
-    width: 20px;
-    height: 20px;
-  }
-  input[type="number"],
-  button {
-    outline: none;
-    padding: 0.3rem 0.5rem;
-    @include radius(0.2rem);
-  }
+  #container {
+    svg {
+      width: 20px;
+      height: 20px;
+    }
+    input[type="number"],
+    button {
+      outline: none;
+      padding: 0.3rem 0.5rem;
+      @include radius(0.2rem);
+    }
 
-  .progress {
-    width: 300px;
-    height: 20px;
+    .progress {
+      width: 300px;
+      height: 20px;
 
-    .progress-bar {
-      display: inline-block;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      @include radius(0.3rem);
-      width: inherit;
-      height: inherit;
-
-      .progress-value {
-        $size: 7.6px;
+      .progress-bar {
         display: inline-block;
-        width: 0%;
-        height: inherit;
-        background: repeating-linear-gradient(
-          -45deg,
-          #04aa6d,
-          #04aa6d $size,
-          #5ac19b $size,
-          #5ac19b #{$size * 2},
-          #04aa6d #{$size * 2},
-          #04aa6d #{$size * 3},
-          #5ac19b #{$size * 3},
-          #5ac19b #{$size * 4},
-          #04aa6d #{$size * 4},
-          #04aa6d #{$size * 5},
-          #5ac19b #{$size * 5},
-          #5ac19b #{$size * 6},
-          #04aa6d #{$size * 6},
-          #04aa6d #{$size * 7},
-          #5ac19b #{$size * 7},
-          #5ac19b #{$size * 8},
-          #04aa6d #{$size * 8},
-          #04aa6d #{$size * 9},
-          #5ac19b #{$size * 9},
-          #5ac19b #{$size * 10}
-        );
+        border: 1px solid #ccc;
+        background-color: #fff;
         @include radius(0.3rem);
-        @include animation("move-stripes", 7s linear infinite);
+        width: inherit;
+        height: inherit;
+
+        .progress-value {
+          $size: 7.6px;
+          display: inline-block;
+          width: 0%;
+          height: inherit;
+          background: repeating-linear-gradient(
+            -45deg,
+            #04aa6d,
+            #04aa6d $size,
+            #5ac19b $size,
+            #5ac19b #{$size * 2},
+            #04aa6d #{$size * 2},
+            #04aa6d #{$size * 3},
+            #5ac19b #{$size * 3},
+            #5ac19b #{$size * 4},
+            #04aa6d #{$size * 4},
+            #04aa6d #{$size * 5},
+            #5ac19b #{$size * 5},
+            #5ac19b #{$size * 6},
+            #04aa6d #{$size * 6},
+            #04aa6d #{$size * 7},
+            #5ac19b #{$size * 7},
+            #5ac19b #{$size * 8},
+            #04aa6d #{$size * 8},
+            #04aa6d #{$size * 9},
+            #5ac19b #{$size * 9},
+            #5ac19b #{$size * 10}
+          );
+          @include radius(0.3rem);
+          @include animation("move-stripes", 7s linear infinite);
+        }
       }
     }
-  }
 
-  input[type="number"] {
-    border: 1px solid #ccc;
-    width: 30px;
-  }
+    input[type="number"] {
+      border: 1px solid #ccc;
+      width: 30px;
+    }
 
-  button {
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    column-gap: 8px;
-    font-size: 0.95rem;
-    text-transform: uppercase;
-    /* style */
-    border: none;
-    background-color: #666666;
-    color: #fff;
-    box-shadow: inset 5px 5px 1rem 0px #555, inset -5px -5px 1rem 0px #777,
-      2px 2px 5px 0px #777, -2px -2px 5px 0px #eee;
+    button {
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      column-gap: 8px;
+      font-size: 0.95rem;
+      text-transform: uppercase;
+      /* style */
+      border: none;
+      background-color: #666666;
+      color: #fff;
+      box-shadow: inset 5px 5px 1rem 0px #555, inset -5px -5px 1rem 0px #777,
+        2px 2px 5px 0px #777, -2px -2px 5px 0px #eee;
+    }
   }
 }
 
