✨ feat: easywebtoon destory 메서드에 canvas element 초기화 추가 + GIF 저장 시 배경 및 지우개 검정색 되는 버그 수정 + GIF 내보내기 100% 로드 변환 후 대기 안내 문구 추가

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,6 +3,10 @@
 @use "sass:list";
 @use "sass:map";
 
+// * {
+//   touch-action: none;
+// }
+
 @mixin radius($radius...) {
   border-radius: $radius;
   -webkit-border-radius: $radius;
